--- a/sftp-config.json
+++ b/sftp-config.json
@@ -20,6 +20,7 @@
     
     "remote_path": "/var/www/eventBudgetApp",
     "ignore_regexes": [
+        "bower_components",
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "\\.svn", "\\.hg", "\\.git",
         "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini"
